@@ -1,5 +1,10 @@
 2005-10-23 Braden McDaniel  <braden@endoframe.com>
 
+	* src/libopenvrml/openvrml/field_value.cpp:  Removed #if 0'd
+	code.
+
+2005-10-23 Braden McDaniel  <braden@endoframe.com>
+
 	Gave field_value classes copy-on-write semantics.
 
 	* src/libopenvrml/openvrml/Vrml97Parser.cpp
